--- a/sorter/index.html
+++ b/sorter/index.html
@@ -77,7 +77,7 @@
                 <label for="epoch">Epoch:</label>
                 <input type="number" class="form-control" id="epoch" placeholder="Enter the epoch" value=400>
             </div>
-            <button class="btn" id="train " ng-click="train()">Start trainig!</button>
+            <button class="btn" id="train " ng-click="train()">Start training!</button>
         </div>
         <div class="loss">Sart training to see the loss...</div>
 
