--- a/sorter/index.html
+++ b/sorter/index.html
@@ -88,6 +88,7 @@
             </div>
 
 
+            <p>Practical</p>
             <div class="radio">
                 <label>
     <input type="radio" name="optionsRadios" id="pass" value=1 checked>
