--- a/navigator/index.html
+++ b/navigator/index.html
@@ -26,7 +26,7 @@
     <div>
         <div>Epochs:</div>
         <input type="number" value=100 id='epoch'>
-        <button ng-click='setEpoch()'>Set epoch and navigate</button>
+        <button ng-click='setEpoch()'>Train</button>
         <button onclick='_start()'>Navigate</button>
 
         <button ng-click='brick()'>Place a brick</button>
