--- a/navigator/index.html
+++ b/navigator/index.html
@@ -31,7 +31,7 @@
 
         <button ng-click='brick()'>Place a brick</button>
         <button ng-click='remove()'>Remove a brick</button>
-        <button ng-click='place()'>Place a the navigator</button>
+        <button ng-click='place()'>Place the navigator</button>
 
 
     </div>
